--- a/src/_includes/searchpage-aside.html
+++ b/src/_includes/searchpage-aside.html
@@ -2,7 +2,7 @@
   <button
     class="toggle-filter-sidebar sidebar-arrow-indicator--fixed bg-black rounded-r-lg fixed top-[122px] left-0 h-11 w-9 flex items-center justify-center cursor-pointer"
   >
-    <img src="./assets/img/icons/filters-open.svg" alt="Icon Arrow" />
+    <img src="/assets/img/icons/filters-open.svg" alt="Icon Arrow" />
   </button>
 
   <div
@@ -13,7 +13,7 @@
     >
       <div class="flex gap-4">
         <img
-          src="./assets/img/icons/filters.svg"
+          src="/assets/img/icons/filters.svg"
           alt="Icon Filters"
           class="w-5"
         />
@@ -24,18 +24,14 @@
           Clear
         </button>
         <button class="toggle-filter-sidebar lg:hidden">
-          <img
-            src="./assets/img/icons/close.svg"
-            alt="Icon Close"
-            class="p-4"
-          />
+          <img src="/assets/img/icons/close.svg" alt="Icon Close" class="p-4" />
         </button>
       </div>
       <button
         class="toggle-filter-sidebar bg-black rounded-r-lg absolute top-6 left-full h-11 w-9 flex items-center justify-center cursor-pointer"
       >
         <img
-          src="./assets/img/icons/arrow-down-white.svg"
+          src="/assets/img/icons/arrow-down-white.svg"
           alt="Icon Arrow"
           class="sidebar-arrow-indicator -rotate-90"
         />
@@ -55,7 +51,7 @@
             >
               Tier
               <img
-                src="./assets/img/icons/arrow-down-black.svg"
+                src="/assets/img/icons/arrow-down-black.svg"
                 alt="Icon Arrow"
                 class="accordion-arrow"
               />
@@ -72,7 +68,7 @@
             >
               Media Type
               <img
-                src="./assets/img/icons/arrow-down-black.svg"
+                src="/assets/img/icons/arrow-down-black.svg"
                 alt="Icon Arrow"
                 class="accordion-arrow"
               />
@@ -86,7 +82,7 @@
                   class="filter-button rounded-lg border-brand-accent border-2 px-3 py-2 text-brand-accent text-xs flex font-inter items-center gap-1.5"
                 >
                   <img
-                    src="./assets/img/icons/image-accent.svg"
+                    src="/assets/img/icons/image-accent.svg"
                     alt="Icon Images"
                     class="w-3"
                   />
@@ -96,7 +92,7 @@
                   class="filter-button rounded-lg border-brand-body1 border px-3 py-2 text-brand-body1 text-xs flex font-inter items-center gap-1.5"
                 >
                   <img
-                    src="./assets/img/icons/photos.svg"
+                    src="/assets/img/icons/photos.svg"
                     alt="Icon Photos"
                     class="w-3"
                   />
@@ -106,7 +102,7 @@
                   class="filter-button rounded-lg border-brand-body1 border px-3 py-2 text-brand-body1 text-xs flex font-inter items-center gap-1.5"
                 >
                   <img
-                    src="./assets/img/icons/menu-vectors.svg"
+                    src="/assets/img/icons/menu-vectors.svg"
                     alt="Icon Vectors"
                     class="w-3"
                   />
@@ -116,7 +112,7 @@
                   class="filter-button rounded-lg border-brand-body1 border px-3 py-2 text-brand-body1 text-xs flex font-inter items-center gap-1.5"
                 >
                   <img
-                    src="./assets/img/icons/editorial.svg"
+                    src="/assets/img/icons/editorial.svg"
                     alt="Icon Editorial"
                     class="w-3"
                   />
@@ -126,7 +122,7 @@
                   class="filter-button rounded-lg border-brand-body1 border px-3 py-2 text-brand-body1 text-xs flex font-inter items-center gap-1.5"
                 >
                   <img
-                    src="./assets/img/icons/menu-videos.svg"
+                    src="/assets/img/icons/menu-videos.svg"
                     alt="Icon Videos"
                     class="w-3"
                   />
@@ -143,7 +139,7 @@
             >
               Orientation
               <img
-                src="./assets/img/icons/arrow-down-black.svg"
+                src="/assets/img/icons/arrow-down-black.svg"
                 alt="Icon Arrow"
                 class="accordion-arrow"
               />
@@ -197,7 +193,7 @@
             >
               People
               <img
-                src="./assets/img/icons/arrow-down-black.svg"
+                src="/assets/img/icons/arrow-down-black.svg"
                 alt="Icon Arrow"
                 class="accordion-arrow"
               />
@@ -240,7 +236,7 @@
             >
               Color
               <img
-                src="./assets/img/icons/arrow-down-black.svg"
+                src="/assets/img/icons/arrow-down-black.svg"
                 alt="Icon Arrow"
                 class="accordion-arrow"
               />
@@ -260,7 +256,7 @@
             >
               Exclude Keywords
               <img
-                src="./assets/img/icons/arrow-down-black.svg"
+                src="/assets/img/icons/arrow-down-black.svg"
                 alt="Icon Arrow"
                 class="accordion-arrow"
               />
@@ -285,7 +281,7 @@
             >
               Text Space
               <img
-                src="./assets/img/icons/arrow-down-black.svg"
+                src="/assets/img/icons/arrow-down-black.svg"
                 alt="Icon Arrow"
                 class="accordion-arrow"
               />
@@ -338,7 +334,7 @@
             >
               Username
               <img
-                src="./assets/img/icons/arrow-down-black.svg"
+                src="/assets/img/icons/arrow-down-black.svg"
                 alt="Icon Arrow"
                 class="accordion-arrow"
               />
@@ -369,7 +365,7 @@
             >
               Date Added
               <img
-                src="./assets/img/icons/arrow-down-black.svg"
+                src="/assets/img/icons/arrow-down-black.svg"
                 alt="Icon Arrow"
                 class="accordion-arrow"
               />
