--- a/src/_includes/searchpage-content.html
+++ b/src/_includes/searchpage-content.html
@@ -5,11 +5,7 @@
     <button
       class="toggle-filter-sidebar lg:hidden flex items-center gap-4 border-brand-body1 border rounded-lg mb-6 px-3 py-2"
     >
-      <img
-        src="./assets/img/icons/filters.svg"
-        alt="Icon Filters"
-        class="w-5"
-      />
+      <img src="/assets/img/icons/filters.svg" alt="Icon Filters" class="w-5" />
       Filters
     </button>
     <div>
@@ -26,19 +22,19 @@
         <div
           class="absolute bottom-4 left-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm"
         >
-          <img src="./assets/img/icons/premium.svg" alt="Icon Premium" />
+          <img src="/assets/img/icons/premium.svg" alt="Icon Premium" />
           Premium
         </div>
         <div
           class="folder-item cursor-pointer absolute bottom-4 right-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm opacity-0 group-hover:opacity-100 transition duration-300"
         >
           <img
-            src="./assets/img/icons/folder.svg"
+            src="/assets/img/icons/folder.svg"
             alt="Icon Folder"
             class="folder-default"
           />
           <img
-            src="./assets/img/icons/folder-active.svg"
+            src="/assets/img/icons/folder-active.svg"
             alt="Icon Folder"
             class="folder-selected"
           />
@@ -46,7 +42,7 @@
         <a href="#" class="cursor-default">
           <img
             loading="lazy"
-            src="./assets/img/gallery/christmas/1.jpg"
+            src="/assets/img/gallery/christmas/1.jpg"
             alt="1"
             class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
           />
@@ -56,19 +52,19 @@
         <div
           class="absolute bottom-4 left-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm"
         >
-          <img src="./assets/img/icons/premium.svg" alt="Icon Premium" />
+          <img src="/assets/img/icons/premium.svg" alt="Icon Premium" />
           Premium
         </div>
         <div
           class="folder-item cursor-pointer absolute bottom-4 right-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm opacity-0 group-hover:opacity-100 transition duration-300"
         >
           <img
-            src="./assets/img/icons/folder.svg"
+            src="/assets/img/icons/folder.svg"
             alt="Icon Folder"
             class="folder-default"
           />
           <img
-            src="./assets/img/icons/folder-active.svg"
+            src="/assets/img/icons/folder-active.svg"
             alt="Icon Folder"
             class="folder-selected"
           />
@@ -76,7 +72,7 @@
         <a href="#" class="cursor-default">
           <img
             loading="lazy"
-            src="./assets/img/gallery/christmas/2.jpg"
+            src="/assets/img/gallery/christmas/2.jpg"
             alt="2"
             class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
           />
@@ -86,19 +82,19 @@
         <div
           class="absolute bottom-4 left-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm"
         >
-          <img src="./assets/img/icons/gift.svg" alt="Icon Gift" />
+          <img src="/assets/img/icons/gift.svg" alt="Icon Gift" />
           Appsumo Startups
         </div>
         <div
           class="folder-item cursor-pointer absolute bottom-4 right-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm opacity-0 group-hover:opacity-100 transition duration-300"
         >
           <img
-            src="./assets/img/icons/folder.svg"
+            src="/assets/img/icons/folder.svg"
             alt="Icon Folder"
             class="folder-default"
           />
           <img
-            src="./assets/img/icons/folder-active.svg"
+            src="/assets/img/icons/folder-active.svg"
             alt="Icon Folder"
             class="folder-selected"
           />
@@ -106,7 +102,7 @@
         <a href="#" class="cursor-default">
           <img
             loading="lazy"
-            src="./assets/img/gallery/christmas/3.jpg"
+            src="/assets/img/gallery/christmas/3.jpg"
             alt="3"
             class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
           />
@@ -116,19 +112,19 @@
         <div
           class="absolute bottom-4 left-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm"
         >
-          <img src="./assets/img/icons/gift.svg" alt="Icon Gift" />
+          <img src="/assets/img/icons/gift.svg" alt="Icon Gift" />
           Appsumo Startups
         </div>
         <div
           class="folder-item cursor-pointer absolute bottom-4 right-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm opacity-0 group-hover:opacity-100 transition duration-300"
         >
           <img
-            src="./assets/img/icons/folder.svg"
+            src="/assets/img/icons/folder.svg"
             alt="Icon Folder"
             class="folder-default"
           />
           <img
-            src="./assets/img/icons/folder-active.svg"
+            src="/assets/img/icons/folder-active.svg"
             alt="Icon Folder"
             class="folder-selected"
           />
@@ -136,7 +132,7 @@
         <a href="#" class="cursor-default">
           <img
             loading="lazy"
-            src="./assets/img/gallery/christmas/4.jpg"
+            src="/assets/img/gallery/christmas/4.jpg"
             alt="4"
             class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
           />
@@ -146,19 +142,19 @@
         <div
           class="absolute bottom-4 left-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm"
         >
-          <img src="./assets/img/icons/gift.svg" alt="Icon Gift" />
+          <img src="/assets/img/icons/gift.svg" alt="Icon Gift" />
           Appsumo Startups
         </div>
         <div
           class="folder-item cursor-pointer absolute bottom-4 right-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm opacity-0 group-hover:opacity-100 transition duration-300"
         >
           <img
-            src="./assets/img/icons/folder.svg"
+            src="/assets/img/icons/folder.svg"
             alt="Icon Folder"
             class="folder-default"
           />
           <img
-            src="./assets/img/icons/folder-active.svg"
+            src="/assets/img/icons/folder-active.svg"
             alt="Icon Folder"
             class="folder-selected"
           />
@@ -166,7 +162,7 @@
         <a href="#" class="cursor-default">
           <img
             loading="lazy"
-            src="./assets/img/gallery/christmas/5.jpg"
+            src="/assets/img/gallery/christmas/5.jpg"
             alt="5"
             class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
           />
@@ -176,19 +172,19 @@
         <div
           class="absolute bottom-4 left-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm"
         >
-          <img src="./assets/img/icons/gift.svg" alt="Icon Gift" />
+          <img src="/assets/img/icons/gift.svg" alt="Icon Gift" />
           Appsumo Startups
         </div>
         <div
           class="folder-item cursor-pointer absolute bottom-4 right-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm opacity-0 group-hover:opacity-100 transition duration-300"
         >
           <img
-            src="./assets/img/icons/folder.svg"
+            src="/assets/img/icons/folder.svg"
             alt="Icon Folder"
             class="folder-default"
           />
           <img
-            src="./assets/img/icons/folder-active.svg"
+            src="/assets/img/icons/folder-active.svg"
             alt="Icon Folder"
             class="folder-selected"
           />
@@ -196,7 +192,7 @@
         <a href="#" class="cursor-default">
           <img
             loading="lazy"
-            src="./assets/img/gallery/christmas/6.jpg"
+            src="/assets/img/gallery/christmas/6.jpg"
             alt="6"
             class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
           />
@@ -206,19 +202,19 @@
         <div
           class="absolute bottom-4 left-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm"
         >
-          <img src="./assets/img/icons/gift.svg" alt="Icon Gift" />
+          <img src="/assets/img/icons/gift.svg" alt="Icon Gift" />
           Appsumo Startups
         </div>
         <div
           class="folder-item cursor-pointer absolute bottom-4 right-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm opacity-0 group-hover:opacity-100 transition duration-300"
         >
           <img
-            src="./assets/img/icons/folder.svg"
+            src="/assets/img/icons/folder.svg"
             alt="Icon Folder"
             class="folder-default"
           />
           <img
-            src="./assets/img/icons/folder-active.svg"
+            src="/assets/img/icons/folder-active.svg"
             alt="Icon Folder"
             class="folder-selected"
           />
@@ -226,7 +222,7 @@
         <a href="#" class="cursor-default">
           <img
             loading="lazy"
-            src="./assets/img/gallery/christmas/7.jpg"
+            src="/assets/img/gallery/christmas/7.jpg"
             alt="7"
             class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
           />
@@ -236,19 +232,19 @@
         <div
           class="absolute bottom-4 left-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm"
         >
-          <img src="./assets/img/icons/gift.svg" alt="Icon Gift" />
+          <img src="/assets/img/icons/gift.svg" alt="Icon Gift" />
           Appsumo Startups
         </div>
         <div
           class="folder-item cursor-pointer absolute bottom-4 right-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm opacity-0 group-hover:opacity-100 transition duration-300"
         >
           <img
-            src="./assets/img/icons/folder.svg"
+            src="/assets/img/icons/folder.svg"
             alt="Icon Folder"
             class="folder-default"
           />
           <img
-            src="./assets/img/icons/folder-active.svg"
+            src="/assets/img/icons/folder-active.svg"
             alt="Icon Folder"
             class="folder-selected"
           />
@@ -256,7 +252,7 @@
         <a href="#" class="cursor-default">
           <img
             loading="lazy"
-            src="./assets/img/gallery/christmas/8.jpg"
+            src="/assets/img/gallery/christmas/8.jpg"
             alt="8"
             class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
           />
@@ -266,19 +262,19 @@
         <div
           class="absolute bottom-4 left-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm"
         >
-          <img src="./assets/img/icons/gift.svg" alt="Icon Gift" />
+          <img src="/assets/img/icons/gift.svg" alt="Icon Gift" />
           Appsumo Startups
         </div>
         <div
           class="folder-item cursor-pointer absolute bottom-4 right-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm opacity-0 group-hover:opacity-100 transition duration-300"
         >
           <img
-            src="./assets/img/icons/folder.svg"
+            src="/assets/img/icons/folder.svg"
             alt="Icon Folder"
             class="folder-default"
           />
           <img
-            src="./assets/img/icons/folder-active.svg"
+            src="/assets/img/icons/folder-active.svg"
             alt="Icon Folder"
             class="folder-selected"
           />
@@ -286,7 +282,7 @@
         <a href="#" class="cursor-default">
           <img
             loading="lazy"
-            src="./assets/img/gallery/christmas/9.jpg"
+            src="/assets/img/gallery/christmas/9.jpg"
             alt="9"
             class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
           />
@@ -296,19 +292,19 @@
         <div
           class="absolute bottom-4 left-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm"
         >
-          <img src="./assets/img/icons/gift.svg" alt="Icon Gift" />
+          <img src="/assets/img/icons/gift.svg" alt="Icon Gift" />
           Appsumo Startups
         </div>
         <div
           class="folder-item cursor-pointer absolute bottom-4 right-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm opacity-0 group-hover:opacity-100 transition duration-300"
         >
           <img
-            src="./assets/img/icons/folder.svg"
+            src="/assets/img/icons/folder.svg"
             alt="Icon Folder"
             class="folder-default"
           />
           <img
-            src="./assets/img/icons/folder-active.svg"
+            src="/assets/img/icons/folder-active.svg"
             alt="Icon Folder"
             class="folder-selected"
           />
@@ -316,7 +312,7 @@
         <a href="#" class="cursor-default">
           <img
             loading="lazy"
-            src="./assets/img/gallery/christmas/10.jpg"
+            src="/assets/img/gallery/christmas/10.jpg"
             alt="10"
             class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
           />
@@ -326,19 +322,19 @@
         <div
           class="absolute bottom-4 left-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm"
         >
-          <img src="./assets/img/icons/gift.svg" alt="Icon Gift" />
+          <img src="/assets/img/icons/gift.svg" alt="Icon Gift" />
           Appsumo Startups
         </div>
         <div
           class="folder-item cursor-pointer absolute bottom-4 right-4 text-white flex items-center gap-2 bg-[#000]/50 rounded-lg px-3 py-2 font-light text-sm opacity-0 group-hover:opacity-100 transition duration-300"
         >
           <img
-            src="./assets/img/icons/folder.svg"
+            src="/assets/img/icons/folder.svg"
             alt="Icon Folder"
             class="folder-default"
           />
           <img
-            src="./assets/img/icons/folder-active.svg"
+            src="/assets/img/icons/folder-active.svg"
             alt="Icon Folder"
             class="folder-selected"
           />
@@ -346,7 +342,7 @@
         <a href="#" class="cursor-default">
           <img
             loading="lazy"
-            src="./assets/img/gallery/christmas/11.jpg"
+            src="/assets/img/gallery/christmas/11.jpg"
             alt="11"
             class="rounded-lg h-[110px] sm:h-[200px] lg:h-[260px] object-cover max-w-full min-w-full"
           />
@@ -355,7 +351,7 @@
     </div>
     <div class="py-10 flex items-center gap-4 justify-center">
       <img
-        src="./assets/img/icons/arrow-down-black.svg"
+        src="/assets/img/icons/arrow-down-black.svg"
         alt="Icon Prev"
         class="rotate-90 cursor-pointer p-2"
       />
@@ -367,7 +363,7 @@
       />
       <span class="text-brand-body1 font-light">of 29 pages</span>
       <img
-        src="./assets/img/icons/arrow-down-black.svg"
+        src="/assets/img/icons/arrow-down-black.svg"
         alt="Icon Next"
         class="-rotate-90 cursor-pointer p-2"
       />
