--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" href="./assets/img/favicon.ico" />
+    <link rel="shortcut icon" href="/assets/img/favicon.ico" />
 
     <title>{{title}}</title>
 
@@ -34,7 +34,7 @@
       <span class="rotate-180 overflow-y-hidden"></span>
     </div>
     <!-- Assets -->
-    <link rel="stylesheet" href="./dist/output.css" />
-    <script src="./dist/scripts.js"></script>
+    <link rel="stylesheet" href="/dist/output.css" />
+    <script src="/dist/scripts.js"></script>
   </body>
 </html>
